--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,14 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     open-pull-requests-limit: 5
     reviewers:
-      - "owner"
+      - 'owner'
     assignees:
-      - "owner"
+      - 'owner'
     commit-message:
-      prefix: "deps"
-      include: "scope" 
+      prefix: 'deps'
+      include: 'scope'
