--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-    "name": "nettup",
-    "version": "0.1.0",
-    "private": true,
-    "engines": {
-        "node": ">=18"
-    },
-    "scripts": {
-        "dev": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview",
-        "lint": "eslint . --ext .js,.ts,.astro",
-        "format": "prettier --write .",
-        "test": "vitest",
-        "test:e2e": "playwright test",
-        "test:e2e:ui": "playwright test --ui",
-        "audit": "npm audit --audit-level moderate",
-        "check": "npm run lint && npm run format -- --check && npm run test && npm run audit"
-    },
-    "dependencies": {
-        "@astrojs/sitemap": "^3.0.0",
-        "@astrojs/tailwind": "^5.0.0",
-        "astro": "^5.12.3",
-        "astro-robots-txt": "^1.0.0",
-        "autoprefixer": "^10.4.0",
-        "postcss": "^8.4.0",
-        "tailwindcss": "^3.4.0",
-        "workbox-build": "^7.0.0"
-    },
-    "devDependencies": {
-        "@playwright/test": "^1.40.0",
-        "axe-core": "^4.8.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-astro": "^0.30.0",
-        "happy-dom": "^18.0.1",
-        "prettier": "^3.0.0",
-        "prettier-plugin-astro": "^0.12.0",
-        "vitest": "^3.2.4"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-    ]
+  "name": "nettup",
+  "version": "0.1.0",
+  "private": true,
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "lint": "eslint . --ext .js,.ts,.astro",
+    "format": "prettier --write .",
+    "test": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "audit": "npm audit --audit-level moderate",
+    "check": "npm run lint && npm run format -- --check && npm run test && npm run audit"
+  },
+  "dependencies": {
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^5.12.3",
+    "astro-robots-txt": "^1.0.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "workbox-build": "^7.0.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "axe-core": "^4.8.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^0.30.0",
+    "happy-dom": "^18.0.1",
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.12.0",
+    "vitest": "^3.2.4"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
