--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "start": "node ./dist/server/entry.mjs",
     "lint": "eslint . --ext .js,.ts,.astro",
     "format": "prettier --write .",
     "test": "vitest run",
@@ -19,12 +20,15 @@
     "check": "npm run lint && npm run format -- --check && npm run test && npm run audit"
   },
   "dependencies": {
+    "@astrojs/node": "^9.3.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^5.12.3",
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.0",
+    "dotenv": "^17.2.1",
     "postcss": "^8.4.0",
+    "resend": "^4.7.0",
     "tailwindcss": "^3.4.0",
     "workbox-build": "^7.0.0"
   },
