--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-# Resend API Key for email functionality
-# Get your API key from https://resend.com/api-keys
-RESEND_API_KEY=re_your_api_key_here 
+# Environment Variables Template
+# Copy this file to .env and update with your actual values
+
+# Google Analytics ID
+# Replace with your actual GA4 measurement ID
+PUBLIC_GA_ID=G-**YOUR_GA_ID**
+
+# Other environment variables can be added here
+# Remember: Only variables prefixed with PUBLIC_ are available in the browser 
