feat: migrate from Resend to FormSubmit.co for GitHub Pages compatibility
- Remove all API routes (kontakt.ts, lead.ts)
- Remove Resend dependency and environment variables
- Implement FormSubmit.co for contact form
- Add thank you page (/takk) for form success redirect
- Simplify contact form - remove complex JavaScript
- Update documentation and setup guides
- Perfect for GitHub Pages static hosting
- 100% free solution with automatic email delivery

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@
 
 # Google Analytics ID
 # Replace with your actual GA4 measurement ID
-PUBLIC_GA_ID=G-**YOUR_GA_ID**
+PUBLIC_GA_ID=G-JGFB95353H
 
-# Other environment variables can be added here
-# Remember: Only variables prefixed with PUBLIC_ are available in the browser 
+# Note: Contact forms now use FormSubmit.co (no API keys needed)
+# FormSubmit.co is a free service that handles form submissions
+# No backend infrastructure or environment variables required
