--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "audit": "npm audit --audit-level moderate",
-    "check": "npm run lint && npm run format -- --check && npm run test && npm run audit"
+    "check": "npm run lint && npm run format -- --check && npm run test && npm run audit",
+    "optimize-images": "node scripts/optimize-images.cjs"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.0.0",
@@ -25,6 +26,7 @@
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.0",
     "workbox-build": "^7.0.0"
   },
