--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "astro": "^5.12.3",
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.0",
